Remove old panama builds and bump memory-segment module to JDK 22