@@ -33,9 +33,9 @@
   <properties>
     <javaModuleName>io.netty5.buffer.memseg</javaModuleName>
     <!-- Java version for bytecode compatibility. -->
-    <java.compatibility>21</java.compatibility>
+    <java.compatibility>22</java.compatibility>
     <!-- Java version actually used to perform the build; compiling and testing. -->
-    <java.version>21</java.version>
+    <java.version>22</java.version>
     <surefire.version>3.0.0-M5</surefire.version>
     <jmh.version>1.33</jmh.version>
   </properties>
@@ -67,14 +67,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.version}</version>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-          <dependenciesToScan>io.netty:*</dependenciesToScan>
-          <includes>
-            <include>io.netty5.buffer.**.*Test.java</include>
-            <include>io.netty5.buffer.**.*IT.java</include>
-          </includes>
-        </configuration>
       </plugin>
     </plugins>
   </build>
